# Multiagents

./: .$Modelos.drawio.bkp  Modelos.drawio  Multimodal Agents LangGraph.ipynb  README.md  app.py  langgraph.json  main.py  pyproject.toml  requirements.txt
graph/: graph.py
