[tool.poetry]
name = "multimodal-agent"
version = "0.1.0"
description = ""
authors = ["baraldi-daniel"]
readme = "README.md"
packages = [{ include = "graph" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.44.1"
langchain-core = "^0.3.51"
langchain-ollama = "^0.3.0"
langgraph = "^0.3.25"
langchain = "^0.3.23"
pydantic = "^2.11.2"
selenium = "^4.31.0"
transformers = "^4.50.3"
langchain-ibm = "^0.3.10"
dotenv = "^0.9.9"
diffusers = "^0.33.1"
librosa = "^0.11.0"
soundfile = "^0.13.1"
pip = "^25.0.1"
torchsde = "^0.2.6"
streamlit-chat-widget = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
